--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -9,7 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login Form </title>
-    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/login.css" />
 
 </head>
 <body>
@@ -41,7 +45,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <button class="btn btn-outline-dark btn-lg px-5 mt-3" type="submit">Login</button>
+                                        <button class="btn btn-outline-dark m-2 px-5"  type="submit">Login</button>
                                     </div>
                                     <div class="mt-3">
                                         <p>
