--- a/Pages/Account/Register.cshtml
+++ b/Pages/Account/Register.cshtml
@@ -11,7 +11,12 @@
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
     <link rel="stylesheet" href="/css/login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
+    
 </head>
 <body>
         <div class="container py-3 h-auto">
@@ -21,7 +26,7 @@
                         <div class="card-body p-5 ">
                             <div class="mb-md-5 mt-md-4 pb-5">
                                 <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                                    <h2 fw-bold mb-2 text-uppercase text-center>Sign Up.</h2>
+                                    <h2 d-flex fw-bold mb-2 text-uppercase text-center>Sign Up</h2>
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-outline form-dark mb-2">
                                         <label asp-for="Input.PhoneNumber"></label>
@@ -44,10 +49,10 @@
                                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                     </div>
                                     <div class="button d-flex justify-content-center mb-4 ">
-                                        <button class="btn btn-outline-dark btn-lg px-5 " type="submit">Register</button>
+                                    <button class="btn btn-outline-dark mt-4 px-5 " type="submit">Register</button>
                                     </div>
                                     <div class="button d-flex justify-content-center mb-4 ">
-                                        <input type=button  class ="btn btn-outline-dark btn-lg px-5 "value="back" onclick='history.go(-1)'>
+                                    <input type=button class="btn btn-outline-dark m-2 px-5 " value="back" onclick='history.go(-1)'>
                                     </div>
                                 </form>
                             </div>
