--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,11 +15,17 @@
     <title>หน้าหลัก</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
     <link rel="stylesheet" href="~/css/Index.css" asp-append-version="true"/>
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
+
+ 
 </head>
 
 <body>
     <div class="container">
-        <div class="d-flex flex-row align-items-center ">
+        <div class="d-flex flex-row align-items-center mb-4 " style="background-color: #FAF4F4;  border-radius: 12px;}">
             <div class="d-flex justify-content-md-start m-3">
                 <i class="fa-solid fa-location-dot fa-3x"></i>
             </div>
@@ -36,15 +42,11 @@
                 </div>
             </div>
         </div>
-        <div class="search">
-            <div class="d-flex rounded border justify-content-center mb-3 ">
-                <button class="btn btn-secondary" type="button" id="button-addon1"><i class="fa fa-search" aria-hidden="true"></i></button>
-                <input class="form-control form-control-rounded" type="search" placeholder="Search anything " aria-label="Search">
-            </div>
-        </div>
+   
         @*---------------------------------------------------------------------------------------------------------------------------------------*@
         @*  Promotion box*@
         <!-- Carousel -->
+        <div class="col-12">
         <div id="Promotion" class="carousel slide d-flex p-3" data-bs-ride="carousel">
             <!-- Indicators/dots -->
             <div class="carousel-indicators">
@@ -56,26 +58,20 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner  " id="imgPromotion">
                 <div class="carousel-item active">
-                    <img src="/images/h89cukbew0ny.webp" class="d-block img-fluid m-auto">
+                        <img src="/images/Promotion picture/Oh My Cup!45B.svg" class="d-block img-fluid m-auto" style="width: 100%;">
                 </div>
-                <div class="carousel-item">
-                    <img src="/images/Promotion.jpg" class="d-block img-fluid m-auto">
-                </div>
-                <div class="carousel-item">
-                    <img src="/images/Promotion1.jpg" class="d-block img-fluid m-auto">
-                </div>
+                    <div class="carousel-item">
+                        <img src="/images/Promotion picture/Oh My Cup!45B.svg" class="d-block img-fluid m-auto" style="width: 100%;">
+                        </div>
+                    <div class="carousel-item">
+                        <img src="/images/Promotion picture/Oh My Cup!45B.svg" class="d-block img-fluid m-auto" style="width: 100%;">
+                    </div>
+         
             </div>
-
+            </div>
             <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#Promotion" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#Promotion" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            
-            </button>
-        </div>
+       
+     
         @*----------------------------------------------------------------------------------------------------------------------------------------*@
         @*Catagory box*@
         <div class="Catagory">
@@ -101,20 +97,21 @@
                     <div class="col-4" id="productborder">
                         <div class="ImageProduct">
                             <a asp-page="./OrderDetail" asp-route-id="@item.ProductID">
-                                <img src="data:image/jpg;base64,@item.ProductImage" class="img-fluid">
+                                <img src="data:image/jpg;base64,@item.ProductImage" class="imagedrink m-auto">
                             </a>
                         </div>
                         <div class="my-2 text-center">
                             @item.ProductName 
                         </div>
                         <div class="my-2 text-center">
-                            @item.ProductPrice
+                            @item.ProductPrice <label>บาท</label>
                         </div>
                     </div>
                 }
             </div>
         </div>
     </div>
+    
 </body>
 
 
