--- a/Pages/OrderDetail.cshtml
+++ b/Pages/OrderDetail.cshtml
@@ -8,52 +8,99 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OrderDetail</title>
-    <link rel="stylesheet" href="~/css/orderdetail.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
+    <link rel="stylesheet" href="~/css/orderdetail.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-       
-        <div class="row">      
+          <form method="post" enctype="multipart/form-data">
+        <div class="row">
             <div class="image mt-5">
-                <img src="data:image/jpg;base64,@Model.Product.ProductImage" class="img-fluid"/>
+                <img src="data:image/jpg;base64,@Model.Product.ProductImage" class="img-fluid" />
             </div>
             <div class="Ordername ">
                 <h3> @Model.Product.ProductName</h3>
             </div>
             <div class="Flavor p-4">
-           <form method="post" enctype="multipart/form-data">
-                <input type="hidden" asp-for="Product" />
-                <div class="text"><p>กรุณาเลือกความหวาน</p></div>
-                <div class="form-check">
+               
+                    <input type="hidden" asp-for="Product" />
+                    <div class="text"><p>กรุณาเลือกความหวาน</p></div>
+                    <div class="form-check">
                         <input asp-for="Order.Sugar" class="form-check-input" type="radio" name="Order.Sugar" value="MoreSugar">
-                    <label class="form-check-label lightLabel">
-                        หวานมาก
-                    </label>
-                </div>
-                <div class="form-check">
-                        <input asp-for="Order.Sugar" class="form-check-input" type="radio" name="Order.Sugar" value="Normal" checked>
-                    <label class="form-check-label lightLabel">
-                        หวานปกติ
-                    </label>
-                </div>
-                <div class="form-check">
-                        <input asp-for="Order.Sugar" class="form-check-input" type="radio" name="Order.Sugar" value="LessSugar">
-                    <label class="form-check-label lightLabel">
-                        หวานน้อย
-                    </label>
-                </div>
-                <div class="Add_Cup  flex-row flex-md-wrap flex-nowrap justify-content-center">
-                        <input asp-for="Order.Cup_Amount" class="form-control input-number" value="1" min="1" max="10">
-                    <div class="row flex-row p-4">
-                        <h1>
-                            ราคา @Model.Product.ProductPrice
-                        </h1>
+                        <label class="form-check-label lightLabel">
+                            หวานมาก
+                        </label>
                     </div>
-                </div>
-                    <input type="submit" value="pay" @*asp-page="./waitingorder"*@ class="btn btn-primary" />
-            </form>
+                    <div class="form-check">
+                        <input asp-for="Order.Sugar" class="form-check-input" type="radio" name="Order.Sugar" value="Normal" checked>
+                        <label class="form-check-label lightLabel">
+                            หวานปกติ
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input asp-for="Order.Sugar" class="form-check-input" type="radio" name="Order.Sugar" value="LessSugar">
+                        <label class="form-check-label lightLabel">
+                            หวานน้อย
+                        </label>
+                    </div>
+
+                   
+                    <br><br>
+                    <label for="quantity">กรุณาเลือกจำนวนแก้ว </label><br><br>
+                    <input asp-for="Order.Cup_Amount" id="quantity1" name="Order.Cup_Amount" class="form-check-input" type="radio" value="1" onchange="calculateTotal()" required>
+                    <label class="form-check-label" for="coffee1">1แก้ว</label>
+                    <input asp-for="Order.Cup_Amount" id="quantity2" name="Order.Cup_Amount" class="form-check-input" type="radio" value="2" onchange="calculateTotal()" required>
+                    <label class="form-check-label" for="coffee2">2แก้ว</label>
+                    <input asp-for="Order.Cup_Amount" id="quantity3" name="Order.Cup_Amount" class="form-check-input" type="radio" value="3" onchange="calculateTotal()" required>
+                    <label class="form-check-label" for="coffee3">3แก้ว</label>
+                    <br><br>
+                   
+                    <input type="checkbox" value="เก็บในStock " class="form-check-input custom-checkbox" @*asp-page="./index"*@ /> <label class="form-check-label lightLabel">
+                        เก็บไว้ในชั้น
+
+
+                        
+
+                        <script>
+                            function calculateTotal() {
+                                let price = @Model.Product.ProductPrice
+                                let quantity = document.querySelector('input[name="Order.Cup_Amount"]:checked').value;
+                                let total = price * quantity;
+                            
+                                document.getElementById("total").innerHTML = `ราคาทั้งหมด ${total} บาท`;
+                            }
+                            
+                           
+                        </script>
+
+             
             </div>
         </div>
+
+        <footer class=" py-3">
+           
+                <div class="container">
+                    <h1 id="total"></h1></h1>
+                    <div class="row">
+                        <div class="col-6">
+                            <a href="/index" class="btn btn-primary mx-2">ย้อนกลับ</a>
+                            
+
+                        </div>
+                        <div class="col-6 text-end">
+        <input type="submit" value="สั่งเครื่องดื่ม" @*asp-page="./waitingorder"*@ class="btn btn-primary mx-3" />
+
+                        </div>
+                    </div>
+
+                </div>
+            
+        </footer>
+         </form>
+
 
     </div>
 </body>
