--- a/Pages/userprofile.cshtml
+++ b/Pages/userprofile.cshtml
@@ -2,3 +2,90 @@
 @model OMC.Pages.userModel
 @{
 }
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Userprofile</title>
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
+    <link rel="stylesheet" href="~/css/Userprofile.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
+
+</head>
+<body>
+    <div class="container emp-profile">
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="profile-img">
+                    <img src="/images/images/person.svg"  class="image-fluid rounded"/>
+                    <div class="file btn btn-lg btn-primary">
+                        Change Photo
+                        <input type="file" name="file" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="profile-head">
+                    <h5>
+                        chonwee deeja
+                    </h5>
+
+              
+                     <div class="row">
+           
+            <div class="col-md-8">
+
+                <div class="row">
+                
+                    <div class="col-md-6">
+                        <label>User Id</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>chonwee26</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Name</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Chonwee</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Email</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>chonwee@gmail.com</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Phone</label>
+                    </div>
+                    <div class="col-md-6">
+                        <p>123 456 7890</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+                </div>
+            </div>
+            <div class="col-md-2">
+                <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
+            </div>
+     </div>
+     </div>
+     
+      
+</body>
+</html>
