--- a/Pages/waitingorder.cshtml
+++ b/Pages/waitingorder.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
-@model OMC.Pages.waitingorderModel 
+@model OMC.Pages.waitingorderModel
 @{
+    ViewData["Title"] = "WaitingOrder";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -11,18 +12,13 @@
     <title>Sign Up Form </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
     <link rel="stylesheet" href="~/css/waitingorder.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container py-3 mb-5 h-100">
         <div class="con">
-            <div class="row">
-                <span class="queue-position">Orders.QueuePosition</span>
-                @if (Model.Order != null && Model.Order.Status == "Waiting")
-                {
-                   
-                }
-
-            </div>
             <div class="row">
                 <div class="cup">
                     <span class="steam"></span>
@@ -41,23 +37,11 @@
             <h1>รอรับเครื่องดื่มในอีก30วินาที</h1>
         </div>
         <div class="main my-4 mt-2 d-flex justify-content-center">
-            <a class="btn btn-primary" role="button" href="/Index">กลับสู่หน้าหลัก</a>
+            <a class="btn btn-primary_wait" role="button" href="/Index">กลับสู่หน้าหลัก</a>
         </div>
+        <h1>Current Queue: <span id="queuePosition"></span></h1>
     </div>
 
+   
 </body>
-<script src="~/js/signalr/dist/browser/signalr.min.js"></script>
-<script>
-    var connection = new signalR.HubConnectionBuilder().withUrl("/queueHub").build();
-
-    connection.on("UpdateCountdown", function (queuePosition) {
-        $(".queue-position").text(queuePosition);
-    });
-
-    connection.start().then(function () {
-        console.log("SignalR connected.");
-    }).catch(function (err) {
-        console.error(err.toString());
-    });
-</script>
 </html>
