--- a/wwwroot/css/Index.css
+++ b/wwwroot/css/Index.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans Thai', sans-serif;
 }
 
 body {
@@ -34,17 +34,15 @@ ngb-carousel:focus {
 }
 
 .Catagory {
-    background-color: #EDD5C3;
+    background-color: #FAF4F4;
+    padding: 1.5rem;
+    border-radius: 12px;
 }
 
 i {
     color: #662C03;
 }
-.me-2 {
-    display: flex;
-    max-width: 50%; /* Set the maximum width of the image to 200 pixels */
-    max-height: 50%; /* Set the maximum height of the image to 100 pixels */
-}
+
 
 @media (min-width: 1200px) {
     #imgPromotion { 
@@ -75,6 +73,17 @@ i {
     font-size: 25px;
 }
 
+.Product {
+    background-color: #FAF4F4;
+    border-radius: 12px;
+    padding-left:1.5rem;
+    margin-top:2.5rem;
+}
+.Product h1 {
+    color: #662C03;
+    font-size: 25px;
+}
+
 #productborder{
     display:table-row;
     justify-content:end;
@@ -87,6 +96,7 @@ i {
     display: flex;
     background-color: #FAF4F4;
     border-radius: 12px;
+   
 }
 
 
@@ -104,6 +114,7 @@ i {
         color: #662C03;
         font-size: 15px;
         font-weight: bold;
+       
     }
 }
 
@@ -112,7 +123,39 @@ i {
         color: #662C03;
         font-size: 25px;
         font-weight: bold;
+       
     }
 }
 
-d
+@media (max-width: 1199.98px) {
+    .me-2 {
+        display: flex;
+        max-width: 20%; /* Set the maximum width of the image to 200 pixels */
+        max-height: auto; /* Set the maximum height of the image to 100 pixels */
+    }
+}
+
+@media (min-width: 1200px) {
+    .me-2 {
+        display: flex;
+        max-width: 12%; /* Set the maximum width of the image to 200 pixels */
+        max-height: auto; /* Set the maximum height of the image to 100 pixels */
+    }
+}
+.btn {
+    z-index: 100;
+}
+@media (max-width: 767.98px) {
+    .imagedrink {
+        display: flex;
+        max-width: 40%; /* Set the maximum width of the image to 200 pixels */
+        max-height: auto; /* Set the maximum height of the image to 100 pixels */
+    }
+}
+@media (min-width: 768px) {
+    .imagedrink {
+        display: flex;
+        max-width: 100%; /* Set the maximum width of the image to 200 pixels */
+        max-height: auto; /* Set the maximum height of the image to 100 pixels */
+    }
+}
