--- a/wwwroot/css/signup.css
+++ b/wwwroot/css/signup.css
@@ -1,5 +1,8 @@
 ﻿* {
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Noto Sans Thai', sans-serif;
 }
 
 .card {
